Fix flickering

--- a/DS2-SOTFS-ModdingToolbox/wwwroot/index.scss
+++ b/DS2-SOTFS-ModdingToolbox/wwwroot/index.scss
@@ -573,13 +573,13 @@ button {
     height: calc(100% - 20px);
     font-size: .85em;
     top: 10px;
-    background: rgba(black, .375);
+    background: rgba(black, 0);
     padding: .25rem;
     padding-left: 5px;
     gap: .25rem;
-    opacity: 0;
 
     &.visible {
+        background: rgba(black, .375);
         left: 5px;
         opacity: 1;
 
